@@ -24,8 +24,8 @@ flags of ffmpeg.
 \fB\-q\fR<n>
 : image quality (0 = bad, 10 = best) (default: 8) (only for jpeg)
 .TP
-\fB\-t\fR<n>
-: time to seek to (percentage) (default: 10)
+\fB\-t\fR<n|s>
+: time to seek to (percentage or absolute time hh:mm:ss) (default: 10%)
 .TP
 \fB\-a\fR
 : ignore aspect ratio and generate square thumbnail
