@@ -4,6 +4,7 @@ version ???
 - Option added to ignore aspect ration and generate square thumbnail
 - Quality option added for jpeg thumbnails
 - Man page added (thanks to Lionel Le Folgoc)
+- Added option to seek to absolute time in stead of percentage
 
 version 1.2.6
 - Fixed seeking in large files due to integer overflow (Thanks to AWaters1)
